--- a/src/components/PresentationList/presentation-list.module.css
+++ b/src/components/PresentationList/presentation-list.module.css
@@ -1,3 +1,7 @@
+@import '../../variables/colours.module.css';
+@import '../../variables/typography.module.css';
+@import '../../variables/atoms.module.css';
+
 .presentationListCardContainer {
   display: flex;
   flex-direction: row;
@@ -8,11 +12,31 @@
 }
 
 .presentationListCard {
-  background-color: white;
+  background-color: var(--color-white);
   display: flex;
+  flex: 1 0 calc(25% - 12px);
   flex-direction: column;
   text-decoration: none;
-  border: 1px solid #eeeeee;
+  border: 1px solid var(--color-grey-7);
   border-radius: 8px;
   padding: 24px;
+  overflow:visible;
+}
+
+.presentationListCard h4 {
+  font: var(--type-primary-font);
+  color: var(--color-grey-1);
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.presentationListCard p {
+  font: var(--type-primary-font);
+  color: var(--color-grey-3);
+}
+
+.presentationListCard span {
+  font: var(--type-primary-font);
+  color: var(--color-grey-3);
+  font-size: 0.75rem;
 }
