--- a/src/pages/textEditor/text-editor.module.css
+++ b/src/pages/textEditor/text-editor.module.css
@@ -1,5 +1,11 @@
+@import '../../variables/colours.module.css';
+@import '../../variables/typography.module.css';
+@import '../../variables/atoms.module.css';
+
+
+
 .app{
-    background-color: #f2f2f2;
+    background-color:var(--background-white);
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
@@ -7,7 +13,7 @@
   
   .appContent {
     position: fixed;
-    background-color: #fff;
+    background-color:var(--background-white);
     border-radius: 12px;
     width: 100%;
     height: 100vh;
@@ -32,7 +38,7 @@
     flex-direction: row;
     border-radius: 12px;
     overflow: hidden;
-    background-color: #fff;
+    background-color:var(--background-white);
   }
   
   .editorPane {
@@ -45,7 +51,7 @@
     min-height: 100vh;
     padding-top: 80px;
     padding-left: 126px;
-    background-color: #fff;
+    background-color:var(--background-white);
     overflow-y: scroll;
     -webkit-transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
