--- a/src/variables/atoms.module.css
+++ b/src/variables/atoms.module.css
@@ -1,3 +1,11 @@
+
+/*Spacing units, Padding & Margins*/
+
 :root {
-    --color-black: #222;
+    --xs: 0.5rem;
+    --sm: 1rem;
+    --md: 1.5rem;
+    --lg: 2rem;
+    --xl: 3rem;
+    --xxl: 4rem;
   }
