--- a/src/variables/colours.module.css
+++ b/src/variables/colours.module.css
@@ -1,6 +1,7 @@
 :root {
     --color-black: #222;
     --color-white: #fff;
+    --background-white: ##FAFAFA;
     --color-blue: #2F80ED;
     --color-button-hover: #F6F6FC;
 
